# lrp-scheduling-agent

./: .gitignore  CLAUDE.md  docker-compose.yml
services/api/: Dockerfile  deployment.json  deployment.prod.json  deployment.staging.json  pyproject.toml  railway.worker.toml  sender_blacklist.yaml  yoyo.ini
services/api/migrations/: 0001_gmail_tokens.py  0002_scheduling_loops.py  0003_gmail_push_pipeline.py  0004_agent_suggestions.py  0005_email_drafts.py  0005_suggestion_coordinator.py  0006_suggestion_action_data.py  0007_email_draft_is_forward.py  0008_recruiter_photo_url.py  0009_optional_loop_contacts.py  0010_draft_pending_jit_data.py  0011_collapse_stages_into_loop.py  0012_token_stale_flag.py
services/api/queries/: agent.sql  drafts.sql  gmail_push.sql  gmail_tokens.sql  scheduling.sql  suggestions.sql
services/api/scripts/: create_classifier_prompts.py  create_langfuse_prompts.py  create_memory_writer_prompt.py  gmail_oauth.py  probe_directory_access.py  probe_directory_scope.py  test_ai_integration.py  test_background_reclassify.py  test_classifier_e2e.py  test_draft_generation.py  test_drafts_e2e.py  test_gmail_integration.py  test_push_pipeline.py  upload_classifier_dataset.py  upload_prompts_to_langfuse.py
services/api/src/api/: app_state.py  ids.py  main.py
services/api/src/api/addon/: auth.py  cards.py  contact_inputs.py  directory.py  models.py  routes.py
services/api/src/api/agent/: __init__.py  cards.py  engine.py  guardrails.py  llm.py  models.py  prefilter.py  prompts.py  queries.py  service.py  tracing.py  webhook.py  worker_settings.py  workers.py
services/api/src/api/ai/: __init__.py  endpoint.py  errors.py  langfuse_client.py  llm_service.py
services/api/src/api/classifier/: __init__.py  create_loop_extractor.py  endpoint.py  endpoints.py  formatters.py  hook.py  loop_classifier.py  models.py  next_action_agent.py  prompts.py  queries.py  resolvers.py  router.py  schemas.py  (+4 more)
services/api/tests/: conftest.py  test_addon.py  test_addon_auth.py  test_addon_directory.py  test_addon_models.py  test_addon_send_draft.py  test_agent_engine.py  test_agent_guardrails.py  test_agent_llm.py  test_agent_models.py  test_agent_service.py  test_ai_endpoint.py  test_ai_errors.py  test_ai_langfuse.py  test_ai_llm_service.py  test_classifier_formatters.py  test_classifier_guardrails.py  test_classifier_hook.py  test_classifier_models.py  test_classifier_resolvers.py  test_create_loop_extractor.py  test_draft_cards.py  test_draft_service.py  test_gmail_auth.py  test_gmail_forward.py  test_gmail_hooks.py  test_gmail_models.py  test_gmail_push.py  test_gmail_scope_validation.py  test_gmail_webhook.py  test_health.py  test_overview_cards.py  test_overview_service.py  test_prefilter.py  test_scheduling_cards.py  test_scheduling_integration.py  test_scheduling_models.py  test_sender_blacklist.py  test_webhook.py  test_workers.py
(+112 files in other folders)
